AC_PREREQ(2.59)
AC_INIT([umodem], [1.0], [jshusta@whoi.edu])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADER([config.h])

AC_DISABLE_STATIC

AM_INIT_AUTOMAKE(umodem, 1.0)

AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_PROG_LIBTOOL
AC_PROG_RANLIB

AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])

AC_CHECK_FUNCS([fprintf])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT

