AC_PREREQ(2.59)
AC_INIT([umodemd], [1.8], [jshusta@whoi.edu])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_SRCDIR([umodemd.c])

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_GCC_TRADITIONAL

AM_PROG_CC_C_O

AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS([stdlib.h fcntl.h termios.h dirent.h sys/time.h sys/ioctl.h])

AC_C_CONST
AC_C_VOLATILE

AC_STRUCT_TM

AC_TYPE_SIZE_T
AC_TYPE_SIGNAL

AC_FUNC_CLOSEDIR_VOID
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STRERROR_R
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([fprintf snprintf gettimeofday strcspn select memset memcpy memmove strtol strchr])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT

